# DA_AI_Jobs

./: .gitignore  main.py  pyproject.toml
Refrence/01_test/: ai-job-impact-analysis.ipynb
Refrence/02_job_nlp/: notebookdf5023b7dc.ipynb
chwonjae/: pj1_gr4_ai_data_analysis.ipynb
chwonjae/data/: youtube_video_meta.csv
chwonjae/notebooks/: 01_api_video_meta.ipynb  01_top3_youtube_video_crawler.ipynb  01_youtube_crawler.ipynb  02_channel_video_meta.ipynb
cocacoca0810/: 01_youtube_comments.ipynb  02_jobs_merged_0129_LNW.ipynb  02_youtube_videometa.ipynb  jobs_merged_0129_clean_LNW.csv
cocacoca0810/data/: ISEGYE_comments_first.csv  ISEGYE_comments_recent.csv  IVE_comments_most.csv  IVE_comments_recent.csv  PLAVE_comments_first.csv  PLAVE_comments_most.csv  RIIZE_comments_first.csv  RIIZE_comments_most.csv  RIIZE_comments_recent.csv  youtube_video_meta.csv
data/: channel_videos_with_stats.csv  df2_0129.csv
hanvv3/: 01_role_group_prep.csv  jobs_merged_0129_prep.csv  pj1-NLP_VirtualvsReal.ipynb  pj1_grp4-AI_jobs.ipynb  pj1_grp4-Virtual_vs_Real.ipynb  word_freq_Real.att  word_freq_Virtual.att  word_similarity.dl  word_similarity_Real.dl  word_similarity_Virtual.dl
hj.career557/: 01_DataPipe.ipynb
pandapear557/: 01_DataPipe.ipynb  02_EDA.ipynb  02_Preprocessing.ipynb
src/: 01_top3_youtube_video_crawler.ipynb  02_channel_video_crawler.ipynb  02_channel_video_meta.ipynb  03_video_statistics_enrichment.ipynb  04_comment_crawler.ipynb  05_shorts_vs_long_analysis.ipynb  channel.py  channel_all_videos.csv  comments.py  ids.py  utils.py  videos.py
(+16 files in other folders)
