[project]
name = "pj02-data-analysis-team4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "emoji>=2.15.0",
    "jpype1>=1.6.0",
    "jupyter>=1.1.1",
    "kagglehub>=0.4.1",
    "kiwipiepy>=0.22.2",
    "konlpy>=0.6.0",
    "koreanize-matplotlib>=0.1.1",
    "matplotlib>=3.10.8",
    "mlxtend>=0.24.0",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "pyldavis>=3.4.1",
    "python-dotenv>=1.2.1",
    "python-louvain>=0.16",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.40.0",
    "wordcloud>=1.9.6",
]
